# CPP_babel_2018

./: .gitignore  CMakeLists.txt  conanfile.txt
client/: .gitignore  client.pro  main.cpp
client/gui/: gui.pro  loginscreen.cpp  loginscreen.h  loginscreen.hpp  loginscreen.ui  mainscreen.cpp  mainscreen.hpp  mainscreen.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  mainwindow.ui.autosave
client/inc/audio/: AudioManager.hpp  AudioSettings.hpp  EncodeManager.hpp  IAudioManager.hpp  IEncodeManager.hpp
client/inc/client/: client.hpp  readServerWorker.hpp  udpWorker.hpp
client/inc/common/: contacts.hpp
client/inc/network/: TcpClient.hpp
client/inc/viewmodel/: ViewModel.hpp
client/src/: main.cpp
client/src/audio/: AudioManager.cpp  EncodeManager.cpp
client/src/client/: client.cpp  readServerWorker.cpp  udpWorker.cpp
client/src/network/: TcpClient.cpp
client/src/viewmodel/: ViewModel.cpp
core/io/: BinaryStream.cpp  BinaryStream.hpp  BinaryStreamReader.cpp  BinaryStreamReader.hpp  BinaryStreamWriter.cpp  BinaryStreamWriter.hpp
core/net/: Socket.cpp  Socket.hpp  TcpServer.cpp  TcpServer.hpp
core/protocol/: AudioMessage.cpp  AudioMessage.hpp  IntroduceMessage.cpp  IntroduceMessage.hpp  LetsCall.cpp  LetsCall.hpp  LetsCallMessage.cpp  LetsCallMessage.hpp  ListMessage.cpp  ListMessage.hpp  Message.cpp  Message.hpp
server/: main.cpp
server/inc/: Handlers.hpp  TcpClient.hpp  TcpServer.hpp
server/inc/utils/: networkBuffer.hpp
server/src/: TcpClient.cpp  TcpServer.cpp  main.cpp
server/src/utils/: networkBuffer.cpp
test/: main.cpp
